--- a/main.css
+++ b/main.css
@@ -304,7 +304,10 @@ input:invalid {
     border-color: red;
 }
 
-
+/* new css for bootstrap components */ 
+.accordion {
+  width: 90%;
+}
 .accordion-body table {
   border: 1px solid black;
   width: 60%;
